Fix spacing issue with post authors and comments

--- a/app/assets/stylesheets/post_item.css
+++ b/app/assets/stylesheets/post_item.css
@@ -49,6 +49,11 @@
     font-size: 14px;
     font-weight: 600;
     margin: 3px 0px 0px 0px;
+    width: 88%;
+}
+
+.post-picture-with-tag {
+    width: 9.5%;
 }
 
 .post-content-author a {
